# drunk-bar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  fly.toml  main.py  pyproject.toml  run-agents.sh  run-one.sh  start.sh
agent/: client.py  llm.py  run.py
app/: bar.py  district.py  guest.py  models.py  npc.py  photo.py  server.py  translate.py
personas/: bartender_bot.yaml  partyguy.yaml  philosopher.yaml  sad_startup.yaml
skill/: DRUNK-BAR.md  DRUNK-STREET.md  SKILL.md
static/: index.html
